--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@
     }
   }  
   
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
     .card {
         width: 80%;
         height: 30%;
