--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
 
 .card {
     background-color: whitesmoke;
-    width: 40%;
-    height: 20%;
+    width: 80%;
+    height: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@
 .heading {
     display: flex;
     align-items: center;
-    height: 580px;   
+    height: 550px;   
     font-family: 'League Spartan', sans-serif;
 }
 
@@ -46,7 +46,7 @@
     align-items: center;
     cursor: pointer;
     text-transform: uppercase;
-    height: 200px;
+    height: 50px;
     width: 210px;
     opacity: 1;
     background-color: #ffffff;
@@ -105,9 +105,9 @@
     }
   }  
   
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
     .card {
         width: 80%;
-        height: 30%;
+        height: 50%;
     }
   }
